--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div id="contents">
 			<div id="adbox">
 				<div>
-					<img src="images/index" alt="Img" height="390" width="632">
+					<img src="index.jpg" alt="Img" height="390" width="632">
 					<h1>聯盟說明</h1>
 					<h4>行政院國家科學委員會為促使大專校院及學術研究機構有效運用研發能量，以其已建立之核心技術與相關之上中下游產業界建構技術合作聯盟，希冀藉由業界的參與共同組成會員形式之產學技術聯盟，有效落實產學之間互動，提昇業界競爭能力。 
 					<br>
@@ -47,26 +47,6 @@
 		<div id="footer">
 			<div class="background">
 				<div class="body">
-					<form action="index.html" method="post" id="message" class="section">
-						<h3>Send a Message</h3>
-						<ul>
-							<li>
-								<label>Your Name:</label>
-								<input type="text" value="">
-							</li>
-							<li>
-								<label>Email Address:</label>
-								<input type="text" value="">
-							</li>
-							<li>
-								<label>Message:</label>
-								<textarea></textarea>
-							</li>
-							<li>
-								<input type="submit" value="Send">
-							</li>
-						</ul>
-					</form>
 					<div class="section">
 						<h3>聯絡資訊</h3>
 						<ul>
