--- a/rules.html
+++ b/rules.html
@@ -68,32 +68,14 @@
                     六、經費使用
                     <br>
                     聯盟運作過程中產生的各項收入之使用，如會員會費、產學合作計畫收入、技術服務、接受捐贈、廠商配合款及智慧財產之授權與移轉等，均依靜宜大學相關規定辦理。 
+                    <br>
+                    <img src="purpose.jpg" alt="Img" height="390" width="632">
                 </p>
 			</div>
 		</div>
 		<div id="footer">
 			<div class="background">
 				<div class="body">
-					<form action="index.html" method="post" id="message" class="section">
-						<h3>Send a Message</h3>
-						<ul>
-							<li>
-								<label>Your Name:</label>
-								<input type="text" value="">
-							</li>
-							<li>
-								<label>Email Address:</label>
-								<input type="text" value="">
-							</li>
-							<li>
-								<label>Message:</label>
-								<textarea></textarea>
-							</li>
-							<li>
-								<input type="submit" value="Send">
-							</li>
-						</ul>
-					</form>
 					<div class="section">
 						<h3>聯絡資訊</h3>
 						<ul>
