--- a/works.html
+++ b/works.html
@@ -36,6 +36,7 @@
 			<div id="blog">
 				<div id="sidebar">
 					<div class="section">
+						<img src="plan-action.jpg" alt="Img" height="390" width="632">
 						<h5>最新成果</h5>
 						<ul class="posts">
 							<li>
@@ -48,26 +49,6 @@
 		<div id="footer">
 			<div class="background">
 				<div class="body">
-					<form action="index.html" method="post" id="message" class="section">
-						<h3>Send a Message</h3>
-						<ul>
-							<li>
-								<label>Your Name:</label>
-								<input type="text" value="">
-							</li>
-							<li>
-								<label>Email Address:</label>
-								<input type="text" value="">
-							</li>
-							<li>
-								<label>Message:</label>
-								<textarea></textarea>
-							</li>
-							<li>
-								<input type="submit" value="Send">
-							</li>
-						</ul>
-					</form>
 					<div class="section">
 						<h3>聯絡資訊</h3>
 						<ul>
