--- a/works.html
+++ b/works.html
@@ -33,18 +33,17 @@
 			</div>
 		</div>
 		<div id="contents">
-			<div id="blog">
-				<div id="sidebar">
-					<div class="section">
-						<img src="plan-action.jpg" alt="Img" height="390" width="632">
-						<h5>最新成果</h5>
-						<ul class="posts">
-							<li>
-								建構中...
-							</li>
-						</ul>
-					</div>
+			<div id="adbox">
+				<div>
+					<h5>最新成果</h5>
+					<img src="plan-action.jpg" alt="Img" height="390" width="632">
+					<ul class="posts">
+						<li>
+							建構中...
+						</li>
+					</ul>
 				</div>
+			</div>
 		</div>
 		<div id="footer">
 			<div class="background">
